--- a/mimiblog/package.json
+++ b/mimiblog/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "cloudinary": "^2.6.0",
     "firebase": "^11.4.0",
+    "framer-motion": "^12.5.0",
     "next": "15.2.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
