Implemented Lenis and Side Scroll
First iteration of the side scroll and used lenis smooth scroll for the page.

--- a/mimiblog/package.json
+++ b/mimiblog/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@studio-freight/lenis": "^1.0.42",
     "cloudinary": "^2.6.0",
     "firebase": "^11.4.0",
     "framer-motion": "^12.5.0",
